--- a/fstab.yaml
+++ b/fstab.yaml
@@ -1,2 +1,5 @@
 mountpoints:
-  /: https://drive.google.com/drive/folders/1wmTyzhe8eyfvrcmKhP8ua2FdjjSBrtZM
+  /:
+    url: https://drive.google.com/drive/folders/1wmTyzhe8eyfvrcmKhP8ua2FdjjSBrtZM
+    type: "markup"
+    suffix: ".html"
